# kramdown-syntax_tree_sitter

./: .gitmodules  .rubocop.yml  CHANGELOG.md  Gemfile  LICENSE.txt  README.md  Rakefile  console.rb  kramdown-syntax_tree_sitter.gemspec
.github/: CODEOWNERS  dependabot.yaml  dependabot.yml
.github/workflows/: gem-publication.yml  main.yml  quality-control.yml
ext/: Rakefile  tasks.rake
ext/tree_sitter_adapter/: Cargo.toml
ext/tree_sitter_adapter/src/: lib.rs  tree_sitter_adapter.rs
lib/: tree_sitter_adapter.rb
lib/kramdown/: syntax_tree_sitter.rb
lib/kramdown/converter/syntax_highlighter/: tree_sitter.rb
lib/kramdown/syntax_tree_sitter/: languages.rb  version.rb
sig/kramdown/: syntax_tree_sitter.rbs
test/: test_helper.rb  test_tree_sitter_adapter.rb
test/kramdown/: test_syntax_tree_sitter.rb
test/test_files/: bad_syntax_python_tree_sitter.html  bad_syntax_python_tree_sitter.md  html_tree_sitter.html  html_tree_sitter.md  html_tree_sitter_embedded_language.html  html_tree_sitter_embedded_language.md  no_language_tree_sitter.html  no_language_tree_sitter.md  no_language_tree_sitter_inline.html  no_language_tree_sitter_inline.md  python_no_highlight.html  python_rouge.html  python_standard.md  python_tree_sitter.html  python_tree_sitter.md  python_tree_sitter_css_class.html  python_tree_sitter_escape_character.md  python_tree_sitter_inline.html  python_tree_sitter_inline.md  python_tree_sitter_inline_css.html  python_tree_sitter_rouge_identifier.html
