[package]
name = "tree_sitter_adapter"
version = "0.0.0"
edition = "2021"

[lib]
name = "tree_sitter_adapter"
crate-type = ["cdylib"]

[dependencies]
anyhow = "*"
magnus = { version = "*", features = ["embed"] }
tree-sitter = "*"
tree-sitter-cli = "*"
tree-sitter-highlight = "*"
tree-sitter-loader = "*"
